# tymtLauncher-Client

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.dev.ts  vite.config.ts
public/: intercom.json
src/: App.css  firebase.ts  global.css  main.tsx  store.tsx
src-tauri/: Cargo.toml  migrated___.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/abis/: ERC20API.tsx
src/components/: AlertComp.tsx  AnimatedComponent.tsx  CardModal.tsx  ChainBox.tsx  ComingModal.tsx  FeeSwitchButton.tsx  Loading.tsx  PasswordModal.tsx  SwitchComp.tsx  TooltipComponent.tsx
src/components/account/: AccountButton.tsx  AccountHeader.tsx  AccountIconBar.tsx  AccountNextButton.tsx  AuthIconButton.tsx  AuthIconButtons.tsx  Back.tsx  BenefitModal.tsx  ChooseProfileButton.tsx  ChooseProfileDrawer.tsx  CompleteButton.tsx  CreateAccountForm.tsx  DontHaveAccount.tsx  ForgotYourPassword.tsx  HaveAccount.tsx  IAgreeTerms.tsx  InputPasswordNoTooltip.tsx  InputText.tsx  LoginAccountForm.tsx  MnemonicComboBox.tsx  MnemonicConfirm.tsx  MnemonicInput.tsx  MnemonicPad.tsx  MnemonicRandomPad.tsx  MnemonicRandomWord.tsx  MnemonicRevealPad.tsx  MnemonicWord.tsx  OAuthModal.tsx  OrLine.tsx  OtpInput.tsx  PassphraseModal.tsx  ProfileCard.tsx  RedFullButton.tsx  RedFullSmallButton.tsx  RedStrokeButton.tsx  RedStrokeSmallButton.tsx  SecurityLevel.tsx  SignModeButton.tsx  Stepper.tsx  SwitchButton.tsx  (+2 more)
src/components/alert/: AlertList.tsx  Alertlist.tsx
src/components/chat/: AudioToggleButton.tsx  BlockModal.tsx  Bubble.tsx  BubbleAudio.tsx  BubbleDownloadButton.tsx  BubbleFile.tsx  BubbleImage.tsx  BubbleImageModal.tsx  BubbleText.tsx  BubbleVideo.tsx  Chatinputfield.tsx  DMListItem.tsx  DMListItemContextMenu.tsx  DeleteModal.tsx  ExportChatModal.tsx  FRcontextmenu.tsx  GroupAvatar.tsx  GroupImage.tsx  GroupListItem.tsx  GroupListItemContextMenu.tsx  GroupMemberListItem.tsx  Linkify.tsx  MemberInviteButton.tsx  MemberRemoveButton.tsx  NewGroupButton.tsx  NewGroupModal.tsx  NewGroupSwitch.tsx  Orlinechat.tsx  PublicBadge.tsx  RequestModal.tsx  UserListItem.tsx  UserListItemContextMenu.tsx  Userlist.tsx
src/components/home/: Avatar.tsx  Back.tsx  Bottom.tsx  Chatbot.tsx  ComingGameCard.tsx  ComingGameSwiperButtonGroup.tsx  ComingSoon-D53.tsx  ComingSoon.tsx  CopyIconButton.tsx  D53Modal.tsx  District53intro.tsx  ExportIconButton.tsx  FreeGames.tsx  InstallProcessContextMenu.tsx  InstallingProcess.tsx  Menu.tsx  Navbar.tsx  RecentlyAdded-D53.tsx  RecentlyAdded.tsx  TrendingGames.tsx  Tymtshow.tsx  UpdateModal.tsx  UpdateModeal.tsx  WarningModal.tsx  (+1 more)
src/configs/: index.dev.ts  index.ts
src/consts/: Chains.tsx  FilterOptionNames.ts  SocketEventNames.ts  SupportCurrency.ts  SupportTokens.ts  SyncEventNames.ts  TauriEventNames.ts  addresses.tsx  chains.tsx  contracts.tsx  currency.tsx  mnemonics.tsx  privateStoreIds.ts  testMnemonics.tsx  transactions.tsx
src/lib/: Aixo.tsx  Storage.tsx  helper.tsx
src/locale/: en.json  i18n.ts  jp.json
src/providers/: AlertProvider.tsx  AuthProvider.tsx  Chatprovider.tsx  FullscreenProvider.tsx  NotificationProvider.tsx  SocketProvider.tsx  TransactionProvider.tsx  TrayProvider.tsx  UpdateProvider.tsx
src/styles/: ChatStyles.ts  SettingStyle.ts  StoreStyles.ts  WalletStyles.ts  accounts.scss  alert.scss  app.scss  chat.scss  colours.scss  common.scss  commonStyles.ts  fonts.scss  home.scss  homeStyles.ts  scroll.scss  spaces.scss  wallets.scss
src/types/: AlertAPITypes.ts  AuthAPITypes.ts  ChatroomAPITypes.ts  GameListApiTypes.ts  GameTypes.ts  NotificationTypes.ts  ReviewAPITypes.ts  SocketTypes.ts  TauriEventPayloadTypes.ts  UserAPITypes.ts  accountTypes.ts  alertTypes.ts  chatTypes.ts  commonTypes.ts  eventParamTypes.ts  homeTypes.ts  settingTypes.ts  storeTypes.ts  walletTypes.ts
(+315 files in other folders)
