[package]
name = "tymtLauncher"
version = "2.2.2"
description = "tymtLauncher"
authors = ["solar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [ "macos-private-api", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12"}
zip = "*"
zip-extensions = "*"
# tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tar = "0.4"
flate2 = "1.0"
machineid-rs = "1.2.4"
tokio = { version = "1.2", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
actix-web = "4.5"
actix-cors = "0.7"
dotenv = "0.15"
winapi = "0.3"
tauri-plugin-clipboard-manager = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-http = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-updater = "2.0.0-rc.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
