[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package]
name = "tymtLauncher"
version = "2.2.2"
description = "tymtLauncher"
authors = ["solar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.11", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.14", features = [ "macos-private-api", "tray-icon", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream"] }
zip = "*"
zip-extensions = "*"
tar = "0.4"
flate2 = "1.0"
machineid-rs = "1.2.4"
tokio = { version = "1.2", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
actix-web = "4.5"
actix-cors = "0.7"
dotenv = "0.15"
winapi = "0.3"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-cli = "2.0.0-rc.1"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-dialog = "2.0.0-rc.7"
tauri-plugin-http = "2.0.0-rc.5"
tauri-plugin-updater = "2.0.0-rc.3"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
